2008-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow to specify a camera by port.

	  For instance:
		gphoto2 --port usb:005,003 --capture-image


2008-05-24  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main.c,main.h,shell.c}:

	  --capture-image split into:

		--capture-image: just capture the image
		--capture-image-and-download:
			capture the image and download it.

2007-07-21  Marcus Meissner  <marcus@jet.franken.de>

	* implemented --capture-tethered 

2007-01-19  Marcus Meissner  <marcus@jet.franken.de>

	From Victor Wagner <vbwagner@users.sourceforge.net>
	* gphoto2/main.c: read hook script and
	  filename from settings file.

2006-11-25  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: version post 2.3.0 because 2.3.0 has
	been branched.

2006-03-23  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main,action}.{ch}: Added
	  "--wait-event" functionality to exercise/test new
	  gp_camera_wait_for_event() functionality.

2006-03-18  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow wildcard gphoto2 -u *
	  upload, download and deletion, by handling the
	  rest of the arguments after popt option handling.

	* gphoto2/shell.c: Added "put" shell cmd.
	  Added "list-config", "set-config", "get-config" shell
	  cmds. Added "capture-image" shell cmd.

2006-03-11  Hubert Figuiere  <hub@figuiere.net>

	* doc/gphoto2.1: Fix a typo in the man page. Patch
	by <jnovy AT redhat DOT com>

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>
	
	* gphoto2/actions.c: Fixed --port handling 
	  when supplying regexp matched devices, by
	  keeping the GPPortInfoList* over the gphoto2 
	  runtime.

2006-01-27  Theodore Kilgore  <kilgota@auburn.edu>

	* gphoto2/actions.c: added an entry for "Delete all" to 
	action_camera_show_abilities.

2006-01-01  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: version 2.1.99

2005-12-30  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: require libgphoto2 2.1.99
